syntax = "proto3";

package weather;

service Weather {
	rpc AskAboutWeather(AskAboutWeatherRequest) returns (AskAboutWeatherResponse) {}
}

service ScaleConv {
	rpc CelsiusToFahrenheit(CelsiusToFahrenheitRequest) returns (CelsiusToFahrenheitResponse) {}
}

message CelsiusToFahrenheitRequest {
   int64 value = 1;
}

message CelsiusToFahrenheitResponse {
   int64 value = 1;
}

message AskAboutWeatherRequest {
	string city = 1;
	Scale scale = 2;
}

enum Scale {
	CELSIUS = 0;
	FAHRENHEIT = 1;
}

message AskAboutWeatherResponse {
	string result = 1;
}
